# my-claude-code

./: .env  .gitignore  ARCHITECTURE.md  PROJECT_SUMMARY.md  README.md  calculator.py  claude_code_context.json  debug_openrouter.py  llm.py  main.py  pyproject.toml  test_architecture.py  test_system.py  todo.md  x.json
docs/: CCLAUDE_CODE_BROCHURE.md  PROJECT_OVERVIEW.md
examples/: basic_usage.py
reference/: claude-code-system-prompt.txt  task.md
src/claude_code/: __init__.py  cli.py
src/claude_code/agents/: __init__.py  agent_settings.py  base_agent.py  code_agent.py  debug_agent.py  doc_agent.py  general_purpose_agent.py  lead_agent.py  loop_agent.py  main_agent.py  output_style_setup_agent.py  prompts.py  statusline_setup_agent.py  test_agent.py  tool_agent.py
src/claude_code/core/: __init__.py  agent_registry.py  claude_code_system.py  context_manager.py  controller.py  output_parser.py  task_router.py  tool_executor.py  workflow_pipeline.py
src/claude_code/models/: __init__.py  mock_provider.py  model_manager.py  openrouter_provider.py
src/claude_code/prompts/reference/: README.md  (+1 more)
src/claude_code/tools/: __init__.py  base_tool.py  bash_output_tool.py  bash_tool.py  edit_tool.py  exit_tool.py  glob_tool.py  grep_tool.py  kill_bash_tool.py  ls_tool.py  multi_edit_tool.py  notebook_edit_tool.py  read_tool.py  task_tool.py  todo_write_tool.py  web_fetch_tool.py  web_search_tool.py  write_tool.py
src/claude_code/utils/: context_utils.py  logger.py
tests/: test_all_tools.py  test_fix_verification.py  test_ls_fix.py  test_openrouter.py
