[project]
name = "claude-code-python"
version = "0.1.0"
description = "A Python implementation of Claude Code with multi-agent system and Kimi-k2 integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "asyncio-mqtt>=0.16.0",
    "aiofiles>=23.0.0",
]

[project.scripts]
claude-code = "claude_code.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_code"]
